fix(Theming): improved dashboard layout spacing

--- a/apps/Conduit-UI/src/theme/global.css
+++ b/apps/Conduit-UI/src/theme/global.css
@@ -13,14 +13,14 @@ body *::-webkit-scrollbar-track {
 
 /* Handle */
 body *::-webkit-scrollbar-thumb:hover {
-    background: #5B44F2;
+    background: #656469;
     border-radius: 99px !important;
 
 }
 
 /* Handle */
 body *::-webkit-scrollbar-thumb {
-    background: #5B44F2;
+    background: #656469;
     border-radius: 99px !important;
 
 }
